--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,10 +1,15 @@
+
+img video{
+    max-width:100%;
+}
+
 h1 {
-   font-family:sans-serif;
+ 1  font-family:sans-serif;
     font-size:30px;  
     font-weight: 500;
    
 }
-h2, h3, h4, h5, p, ol, dl{
+h2 h3 h4 h5{
     font-family:sans-serif,tahoma;
     
 }
