--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ header,h1{
     height:240px;
     width:400px;
     position:relative;
-  margin:auto;
+ 
     
 }
 #bunny-video p {
@@ -214,7 +214,7 @@ header,h1{
       margin:0;
 }
 
-span{
+#links span{
     position:relative;
     margin:10px 0 0 0;
     display:block;
@@ -310,3 +310,19 @@ span{
     
 }
 
+#hcard-Jimmy-Josef-Andreasson{
+    width:400px;
+    background-color:#BFBFBF;
+    border-style:solid;
+    border-width:1px;
+    margin:5px;
+    height:100px;
+}
+#hcard-Jimmy-Josef-Andreasson p{
+    position:relative;
+    top:-20px;
+    left:84px;
+    width:260px;
+}
+   
+ 
