--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ header,h1{
 {
     margin:auto;
     width:960px;
-    height:1200px;
+    height:auto;
     background-color:#0D1F26;
   
 }
@@ -101,7 +101,7 @@ header,h1{
     position:relative;
     left:175px;
     width:755px;
-    height:900px;
+    height:1500px;
     top:-520px;
     background-color:#88959A;
     overflow-x:auto;
@@ -122,7 +122,7 @@ header,h1{
     top:30px;
     left:30px;
     width:120px;
-    height:550px;
+    height:600px;
     background-color:#88959A;
    
   
@@ -143,7 +143,7 @@ header,h1{
     height:60px;
     width:755px;
     left:175px;
-    top:-500px;
+    top:auto;
     background-color:#586970;
     text-align:center;
 }
@@ -243,6 +243,14 @@ header,h1{
     
     
 }
+ .navLabration a:active{
+    display:block;
+    background: url(pics/linkbild.png) 0 -144px no-repeat;
+    background-color:green;
+   
+    
+    
+}
  .navPresentation a{
    display:block;
    width:auto;
@@ -257,6 +265,13 @@ header,h1{
     display:block;
     background: url(pics/linkbild.png) 0 -240px no-repeat;
     background-color:white;
+    
+    
+}
+ .navPresentation a:active{
+    display:block;
+    background: url(pics/linkbild.png) 0 -240px no-repeat;
+    background-color:green;
     
     
 }
@@ -276,7 +291,12 @@ header,h1{
     
     
 }
- .navHome a{
+ .navKontakt a:active{
+    display:block;
+    background: url(pics/linkbild.png) 0 -336px no-repeat;
+    background-color:green;
+ }
+  .navHome a{
     display:block;
    width:auto;
    height:24px;
@@ -290,8 +310,15 @@ header,h1{
     background: url(pics/linkbild.png) 0 -48px no-repeat;
     background-color:white;
     
+ }    
+.navHome a:active{
+    display:block;
+    background: url(pics/linkbild.png) 0 -48px no-repeat;
+    background-color:green;
+    
     
 }
+
 #links a {
     display:block;
     text-decoration:none;
@@ -323,6 +350,13 @@ header,h1{
     top:-20px;
     left:84px;
     width:260px;
+}
+#bakgrundsbild{
+    width:755px;
+    height:100px;
+    background-image: url("pics/halloween_titel.gif");
+ 
+    
 }
    
  
